# Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/adapters/: database_route_search.py  route_search_orchestrator.py  rzd_route_search.py  sqlalchemy_locations.py  sqlalchemy_route_segments.py  yandex_route_search.py
app/api/: dependencies.py  middleware.py  query_parsers.py  router.py  searches_mapping.py  serializers.py
app/clients/: base.py  rzd_client_factory.py
app/core/: config.py  container.py  database.py  logging.py  logging_config.py  logging_context.py  redis.py
app/models/: __init__.py  carrier.py  enums.py  location.py  route_segment.py
app/providers/: __init__.py  base.py  database.py
app/repositories/: location_repository.py  route_segment_repository.py
app/schemas/: locations.py  routes.py  searches.py
app/scripts/: import_rzd_and_yandex_locations.py  import_rzd_locations.py  import_rzd_locations_using_stations_list.py  import_yandex_locations.py  normalize_yandex_settlements.py  seed_mock_data.py
app/seeding/: __init__.py  builders.py  catalog.py  mock_data.py
app/services/: contracts.py  location_service.py  models.py  (+14 more)
data/: rzd_yandex_location_matches.json  station_names_dataset.json  yandex_settlements_normalized.json
data_pipelines/: find_location_matches.ipynb
tests/: conftest.py  search_service_support.py  test_container.py  test_health.py  test_models.py  test_search_api.py  test_search_service.py  test_seed_mock_data.py
(+9 files in other folders)
