[project]
name = "pdaxenix"
version = "0.1.0"
description = "Аналитический сервис логистики путешествия"
authors = [
    {name = "Daniil Korobko",email = "korobkodaniil396@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=5.2.1,<6.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "tzdata (>=2024.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
httpx = ">=0.28.1,<0.29.0"
pytest = ">=8.3.5,<9.0.0"
pytest-asyncio = ">=0.26.0,<0.27.0"
ruff = ">=0.11.0,<0.12.0"
mypy = ">=1.15.0,<2.0.0"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["app", "tests"]
exclude = [
    ".git",
    ".idea",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    "__pycache__",
    "pdaxenix.db",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]
exclude = [
    "(^|/)__pycache__/",
    "(^|/)\\.pytest_cache/",
]
